--- a/links-and-images/links.html
+++ b/links-and-images/links.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
     <title>Links</title>
+    <meta charset='UTF-8'/>
   </head>
   <body>
     <h1>Links</h1>
@@ -15,7 +16,7 @@
         <a href='https://developer.mozilla.org/en-US/docs/Web/HTML' target='_blank'>Mozilla
         Developer Network</a>, which is a very good resource for web
         developers.</li>
-        
+
       <li>Relative links, like to our <a href='misc/extras.html'>extras
         page</a>.</li>
       
