--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'/>
-    <meta http-equiv='refresh' content='0; URL=/links-and-images/links.html'>
   </head>
+  <body>
+    <p>Redirecting now...</p>
+    <script>
+        window.onload = window.setTimeout(window.location.href = '/links-and-images/links.html', 5000);
+    </script>
+  </body>
 </html>
